# ctrader-skills

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  docs-issue.yml  feature-request.yml  question.yml
.github/workflows/: lint.yml  release-please.yml  test.yml
skills/ctrader-mcp-servers/: SKILL.md
skills/ctrader-mcp-servers/assets/: symbol_precision_table.json
skills/ctrader-mcp-servers/references/: known-quirks.md  local-http-server.md  remote-http-server.md  self-healing-playbook.md  trader-workflows.md
skills/ctrader-mcp-servers/scripts/: conversion_rate.py  pip_math.py  position_sizing.py  tiered_margin.py  units_encoding.py
tests/: test_skill_scripts.py
