[project]
name = "ctrader-skills"
version = "0.1.0"
description = "cTrader skills for agents - analyze market opportunities and trade under control"
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-Spotware-EULA"
authors = [
    { name = "Spotware Systems Ltd", email = "support@ctrader.com" },
]
keywords = [
    "ctrader",
    "trading",
    "forex",
    "agent-skills",
    "skills",
    "ai-agents",
    "spotware",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/spotware/ctrader-skills"
Repository = "https://github.com/spotware/ctrader-skills"
Issues = "https://github.com/spotware/ctrader-skills/issues"
Documentation = "https://github.com/spotware/ctrader-skills#readme"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "mypy>=1.18.2",
]

[tool.uv]
package = false

[tool.commitizen]
name = "cz_conventional_commits"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Enable preview features
preview = true
# General settings
src = ["skills"]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
# Enable rule groups
select = [
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "COM",  # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EXE",  # flake8-executable
    "FIX",  # flake8-fix-me
    "FA",  # flake8-future-annotations
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "FLY",  # flynt
    "I",  # isort
    "N",  # pep8-naming
    "PERF",  # Perflint
    "E", "W",  # pycodestyle
    "DOC",  # pydoclint
    "F",  # Pyflakes
    "PGH",  # pygrep-hooks
    "UP",  # pyupgrade
    "FURB",  # refurb
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
strict = false

[tool.ruff.lint.isort]
known-first-party = ["skills"]
force-single-line = true

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.mypy]
# Core safety, balanced for production
python_version = '3.12'
files = ['skills']
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_explicit = false
disallow_any_unimported = true

# None and Optional handling
no_implicit_optional = true

# Warnings that catch real bugs
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true

# Cleaner public APIs and safer comparisons
implicit_reexport = false
strict_equality = true

# Error message quality
show_error_codes = true
pretty = true

# Encourage precise ignores and common correctness checks
enable_error_code = [
  'ignore-without-code',
  'unused-awaitable',
  'possibly-undefined',
  'truthy-bool',
  'truthy-iterable',
  'redundant-expr',
  'explicit-override'
]

# Skip common noise and respect .gitignore
exclude_gitignore = true
exclude = '''(?x)(
  ^\.venv/
| ^\.tox/
| ^\.mypy_cache/
| ^\.pytest_cache/
| ^build/
| ^dist/
| ^node_modules/
| ^site-packages/
)'''
